# MSTP-Generator

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  doxygen.cfg
doc/html/: annotated.html  annotated.js  blur_8c.html  blur_8c.js  blur_8c__incl.dot  blur_8c__incl.md5  blur_8h.html  blur_8h.js  blur_8h__dep__incl.dot  blur_8h__dep__incl.md5  blur_8h__incl.dot  blur_8h__incl.md5  blur_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  muscatupa_8c.html  muscatupa_8c.js  muscatupa_8c__incl.dot  muscatupa_8c__incl.md5  navtree.js  navtreeindex0.js  structpattern.html  structpattern.js  utils_8c.html  utils_8c.js  utils_8c__incl.dot  utils_8c__incl.md5  utils_8h.html  utils_8h.js  utils_8h__dep__incl.dot  (+4 more)
include/: blind_quarter.h  blur.h  colormap.h  muscatupa.h  pattern.h  symmetry.h
output/scales1/: 00.csv  01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  (+1 more)
src/: CMakeLists.txt  Image.cpp  Image.hpp  InputReader.cpp  InputReader.hpp  PatternGenerator.cpp  PatternGenerator.hpp  Scale.hpp  VideoEncoder.cpp  VideoEncoder.hpp  blind_quarter.cpp  blur.c  blur.cpp  blur.h  colormap.c  colormap.cpp  colormap.h  gifsave_wrapper.c  gifsave_wrapper.h  image_provider.cpp  image_provider.hpp  main.c  main.cpp  muscatupa.c  muscatupa.cpp  muscatupa.h  pattern.cpp  pattern_generator.cpp  pattern_generator.hpp  scale.hpp  symmetry.c  symmetry.cpp  symmetry.h  utils.c  utils.h
(+52 files in other folders)
